brat/test/golden/error/kbadvec2.brat
triple :: { Bool -o Vec(Bool,3) }
triple = { b => nil }
