brat/test/golden/error/kbadvec2.brat.golden
Error in test/golden/error/kbadvec2.brat@2:17-20
triple = { b => nil }
                ^^^

  Expected vector of length 3
from the type:  Vec(Bit, 3)
but got vector: []
of length 0


